<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/spinnerPopup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editText"
            android:singleLine="true"
            android:minHeight="64dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:inputType="text"
            tools:ignore="LabelFor" />


        <ImageView
            android:id="@+id/searchImage"
            android:padding="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end|center_vertical"
            android:src="@android:drawable/ic_menu_search"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:padding="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end|center_vertical" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal"
        android:padding="3dp"/>

        <TextView
            android:id="@+id/emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp" />
    </FrameLayout>
</LinearLayout>