<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="info.tomaszminiach.libshow.MainActivity">

    <info.tomaszminiach.superspinner.SuperSpinner
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/superSpinner"/>

    <LinearLayout
        android:background="#EEEEEE"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
    <TextView
        android:text="Settings:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/simulateLongCheckbox"
        android:text="simulate long time processing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="check selection"
        android:onClick="checkSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
